Corrected a typo in TODO.
Signed-off-by: James McCarthy <james2mccarthy@gmail.com>

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
 * Add generator for seeds directories
 * Add generator for seeds data
-* Add ability add or update records in place
+* Add ability to add or update records in place
 * Make framework agnostic
