--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
 * Add generator for seeds directories
-* Add generator for seeds data
-* Add ability to add or update records in place
-* Make framework agnostic
+* Add platform independent test environment
+* Add generator for seeds data?
+* Add ability to add or update records in place?
